--- a/ManageProperties.API/appsettings.Development.json
+++ b/ManageProperties.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-    "ConnectionStrings": { "ManagePropertiesConnectionString": "Server=LAPTOP_JOSE\\MSSQLSERVER_02;Database=DB_Properties;User Id=sql_admin;Password=Pass@word2;TrustServerCertificate=True;" },
+    "ConnectionStrings": { "ManagePropertiesConnectionString": "Server=LAPTOP_JOSE\\MSSQLSERVER_02;Database=DB_ManagerProperties;User Id=sql_admin;Password=Pass@word2;TrustServerCertificate=True;" },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
